# numerics-interp

./: AGENT.md  Cargo.toml  README.md
memory/: JOURNAL.md
src/: barycentric.rs  cubic_spline.rs  error.rs  lagrange.rs  lib.rs  linear.rs
